<package>
  <name>simulator_art</name>
  <version>1.0.0</version>
  <description>Simulator for Austin Robot Technology autonomous vehicle.</description>
  <maintainer email="jit.ray.c@gmail.com">Jit Ray Chowdhury</maintainer>

  <license>GPL</license>

  <url type="website">http://www.ros.org/wiki/simulator_art</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jack O'Quin</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
   <build_depend>boost</build_depend>
  <build_depend>libfltk-dev</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stage</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>auro_vehicle_msgs</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>boost</run_depend>
  <run_depend>fluid</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>auro_vehicle_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stage</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>angles</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>stage</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>
